<?xml version="1.0" encoding="utf-8"?>
<!--
  设置页。分组、行高、间距全部照参考实现的 fragment_setting.xml：
  分组标题 14sp #BBBBBB、行 50dp、16sp #393939、分组之间 1dp #D2D2D2 分隔线。
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_white"
    android:paddingBottom="@dimen/setting_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/SettingCategoryTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_large"
            android:layout_marginTop="@dimen/setting_margin"
            android:textSize="@dimen/text_16sp"
            android:text="@string/setting_group_regular" />

        <include
            android:id="@+id/row_font_size"
            layout="@layout/view_setting_row"
            android:layout_width="match_parent"
            android:layout_height="@dimen/setting_height"
            android:layout_marginTop="@dimen/space_normal" />

        <LinearLayout
            android:id="@+id/row_example_visibility"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_example_visibility"
                style="@style/SettingItemButton"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/setting_height"
                android:layout_marginTop="@dimen/space_normal"
                android:paddingStart="@dimen/space_large"
                android:text="@string/setting_example_visibility" />

            <TextView
                android:id="@+id/nouse1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:layout_weight="1" />

            <Switch
                android:id="@+id/cb_example_visibility"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/setting_height"
                android:gravity="end"
                android:checked="true"
                style="@style/SettingSwitchStyle"
                android:paddingEnd="@dimen/space_large" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_width"
            android:layout_marginTop="@dimen/space_normal"
            android:background="@color/gray_divider" />

        <TextView
            style="@style/SettingCategoryTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_large"
            android:layout_marginTop="@dimen/setting_margin"
            android:textSize="@dimen/text_16sp"
            android:text="@string/setting_group_result" />

        <include
            android:id="@+id/row_fraction"
            layout="@layout/view_setting_row"
            android:layout_width="match_parent"
            android:layout_height="@dimen/setting_height"
            android:layout_marginTop="@dimen/space_normal" />

        <LinearLayout
            android:id="@+id/row_process_visibility"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_process_visibility"
                style="@style/SettingItemButton"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/setting_height"
                android:layout_marginTop="@dimen/space_normal"
                android:paddingStart="@dimen/space_large"
                android:text="@string/setting_process_visibility" />

            <TextView
                android:id="@+id/nouse2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:layout_weight="1" />

            <Switch
                android:id="@+id/cb_process_visibility"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/setting_height"
                android:gravity="end"
                android:checked="true"
                style="@style/SettingSwitchStyle"
                android:paddingEnd="@dimen/space_large" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_width"
            android:layout_marginTop="@dimen/space_normal"
            android:background="@color/gray_divider" />

        <TextView
            style="@style/SettingCategoryTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_large"
            android:layout_marginTop="@dimen/setting_margin"
            android:textSize="@dimen/text_16sp"
            android:text="@string/setting_group_other" />

        <TextView
            android:id="@+id/tv_check_update"
            style="@style/SettingItemButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/setting_height"
            android:layout_marginTop="@dimen/space_normal"
            android:paddingStart="@dimen/space_large"
            android:text="@string/check_update" />

        <TextView
            android:id="@+id/tv_about"
            style="@style/SettingItemButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/setting_height"
            android:paddingStart="@dimen/space_large"
            android:text="@string/about_us" />
    </LinearLayout>
</ScrollView>
